# realm_chat

./: Cargo.toml  README.md  realm_chat.db  setup.sh  update.sh
.claude/: settings.local.json
client/: Cargo.toml
client/src/: api.rs  app.rs  main.rs  state.rs  ws.rs
common/: Cargo.toml
common/src/: models.rs  protocol.rs
server/: Cargo.toml
server/migrations/: 0001_initial.sql  0002_friends_and_dms.sql
server/src/: auth.rs  db.rs  error.rs  hub.rs  main.rs  state.rs
server/src/routes/: auth.rs  friends.rs  mod.rs  worlds.rs  ws.rs
